리뷰 작성(사진빼고 저장..)

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -579,6 +579,7 @@
     }
 
     function saveReview(){
+        //todo: formData 로 수정해야됨...
         $.ajax({
             url : '/review/create',
             type : 'POST',
