--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -75,20 +75,21 @@
                     <p>메일주소: <span th:text="${email}"></span></p>
                 </div>
 
-                <button class="btn btn-primary btn-md">프로필 사진 수정</button>
+                <input name="uploadFile" type="file" accept="image/gif, image/jpeg, image/png"/>
             </div>
 
-            <form id="editForm" action="/editProfile" method="post" onsubmit="return validateForm()">
+            <form id="editForm" action="/editProfile" method="post" >
             <div class="form-group userInput mb-5">
 
                     <h4 class="list">닉네임</h4>
-                    <input type="text" id="name"  class="form-control form-control-sm" maxlength="20"  placeholder="닉네임">
+                    <input type="text" id="name"  class="form-control form-control-sm" maxlength="20"  th:placeholder="${name}"/>
 
                     <h4 class="list">내 소개</h4>
-                    <textarea id="about" rows="4"  class="form-control form-control-sm" maxlength="20"  placeholder="내 소개"></textarea>
+                    <textarea id="about" rows="4"  class="form-control form-control-sm" maxlength="20"   th:placeholder="${about} == null ? '아직 내용이 없습니다.' : ${about}"></textarea>
 
 
-                <button class="btn-save" onclick="saveProfile()">저장</button>
+                <button class="btn btn-primary2" id="saveProfile" type="submit" onclick="saveProfile()">저장</button>
+                <button class="btn btn-primary2" id="saveCancle">취소</button>
             </div>
             </form>
         </div>
@@ -97,5 +98,47 @@
 </div>
 </div>
 
+
+<script>
+    function saveProfile(){
+
+        let name = $("#name").val();
+        let about = $("#name").val();
+        // let data = $("#editForm").serialize();
+
+        let data = {
+            name: name,
+            about: about
+        }
+
+        $.ajax({
+            type: "PUT",
+            url: '/api/users/editProfile', // 프로필 업데이트를 처리하는 엔드포인트 URL로 변경
+            data: data,
+            contentType: "application/json", // 변경된 contentType
+            dataType: "json"
+
+        }).done(res=>{
+            console.log("update 성공");
+        }).fail(error=> {
+            console.log("update 실패");
+        })
+
+
+    //     취소 버튼 눌렀을 때
+    //     $(document).ready(function() {
+    //         // 취소 버튼 클릭 시 처리할 함수
+    //         $("#saveCancel").click(function() {
+    //             // 유저 아이디를 가져옴
+    //             var userId = $("#userId").text();
+    //             // 유저 아이디를 사용하여 적절한 URL을 생성함
+    //             var cancelUrl = "/mypage/" + userId; // 원하는 URL로 수정
+    //             // 페이지를 리다이렉트함
+    //             window.location.href = cancelUrl;
+    //         });
+    //     });
+    }
+
+</script>
 </body>
 </html>
